---

config:
    layout: elk
    securityLevel: 'loose'
---
classDiagram
    direction TB
    namespace HelperClasses{
        class Interval :::done{

        }
        namespace Einheiten{
            class Unit :::done{
            <<abstract>>
                get value : int
                String symbol

            }
            class Euro :::done{
                int centicents
                ...
            }
            class KiloWattHour :::done{
                int wattHours
                ...
            }
        }
    
    }

    namespace newLog{
        class PartialTransaction{
            
        }
    }
    
    namespace log {

        class WallBoxLog ::: done{
            String head;

            String get deviceID
            DateTime get generationDate

            int logID
            TransactionLog[] transactionLogs

            static fromSource() Future<WallBoxLog?>
        }

        class WallBoxTransactionBlock ::: done{
            String id;
            String deviceID
            
            String? get tagID;
            List~MVLine~ mvLines;

            MainLine? start
            MainLine? stop

            toTransaction() Transaction? TODO
        }

        class WallBoxLine ::: done {
         <<abstract>>
            DateTime timeStamp
            KiloWattHour powerLevelWh

            LineType get type

            tryParse(String source) WallBoxLine?
        }

        class MainLine ::: done {
            String tagID
            bool isStart

        }

        class MVLine ::: done 


        note for WallBoxLog  "Entspricht einer einzelnen eingelesenen Log-Datei"
        note for WallBoxTransactionBlock  "Log einer einzelnen Transaktion\nhasStart  bzw hasEnd"
    }
        
    
    class Transaction ::: inProgress{
        String id
        String tagID;
        String deviceID;
        DateTime start;
        DateTime end;

        Interval get interval

        KiloWattHours powerUsage;
        Percentace? discount;

        getTagAssignment() TagAssignment?
    }

    class TagAssignment ::: inProgress{
        String tagID
        String? tagName
        DateTime from
        DateTime? to
        int customerID
        int? userID

        getCustomer(String tagID, DateTime timestamp) Customer?
    }
    class PriceAssignment ::: inProgress{
        int customerID
        Euro unitPrice
        DateTime from
        DateTime? to
    }

    

    namespace Stammdaten{
        class MasterData::: done{
            <<abstract>>

            validate() String?
        }
    class Customer ::: done{
        int id
        CompanyData? company;
        PersonalData? personal

        
                Adress? adress
                Contact? contact

        getPriceAtTime (DateTime date) Euro
        getTransactions(DateTime from, DateTime to) Transaction[]
    }
        namespace HauptStammdaten{

            class CompanyData :::done{
                String? companyName
                String? compAddition
            }

            class PersonalData :::done{
                Gender? gender
                String? "title"
                String? prename
                String? surname
            }

        }
        namespace StammdatenBausteine{    
            class Adress::: done{
                String? street
                String? number
                String? postcode
                String? city
                String? country
            }

            class Contact::: done{
                Phone? phone
                Phone? mobile

                Email email
            }

            class Phone ::: done{
                String? pre
                String? number
            }

            class Email ::: done{
                String? firstPart
                String? secondPart
                String? domain
            }
        }
    }
    
    namespace bills{
        class CustomerBill{
            String customerID
            String customerName
            DateTime from
            DateTime to

            String address

            List~TransactionBill~ transactionBills

            getSumBeforeTax() Euro
        }
        class TransactionBill{
            String transactionID
            Euro price
        }

        note for CustomerBill "speichert Kundendaten etc. als Snapshot"
    }
    

    WallBoxLine --|> MainLine : can be
    WallBoxLine --|> MVLine : can be

    WallBoxTransactionBlock "1"*--"n" MVLine: mvs
    WallBoxLog *-- WallBoxTransactionBlock : made of
    WallBoxTransactionBlock "1"*--"0..1" MainLine : start
    WallBoxTransactionBlock "1"*--"0..1" MainLine : stop

    WallBoxTransactionBlock --> Transaction: converts to

    Transaction -- TagAssignment

    TagAssignment o-- Customer
    

    Unit --|> KiloWattHour
    Unit --|> Euro
    
    Customer "1"*.."0,n" CompanyData
    Customer "1"*.."0,n" PersonalData
    PriceAssignment "n" *-- "1" Customer

    note for Customer "erhält Tags & Rechnungen"

    note for TagAssignment "wem ist tag x zum Zeitpunkt y zugeordnet?"
    note for PriceAssignment "welchen Preis hat ein Kunde zu Zeitpunkt x?"

    CustomerBill "0,n"<--"1" Customer : pays
    CustomerBill "0,1"*--"1,n" TransactionBill : made up by


    PersonalData o-- Adress
    PersonalData o-- Contact

    Contact o-- Phone
    Contact o-- Email

    CompanyData o-- Adress
    CompanyData o-- Contact



    classDef default fill:#A00,stroke:#333,stroke-width:4px;
    classDef inProgress fill:#A50,stroke:#333,stroke-width:4px;
    classDef done fill:#0A0,stroke:#333,stroke-width:4px, color: black;
    classDef future fill: #444,stroke:#333,stroke-width:4px, color: #AAA;

      

      
namespace Stammdaten.customerApp{

        class User ::: future{
            PersonalData? personal
            VehicleData? vehicle
        }
        
        class VehicleData:::future{
            String? type
            String? color
            String? licencePlate
            ...
        }
        note for User "Für Optionale genauere Zuordnung von Tags\n (ausgehend vom Kunden), später"
    }